# hexl

./: CMakeLists.txt  Makefile  a.out  cmake_install.cmake  compile_commands.json
benchmark/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake/hexl/: hexl-util.cmake
example/: example.cpp
example/cmake/: CMakeLists.txt
hexl/: CMakeLists.txt  Makefile  cmake_install.cmake
hexl/cmake/hexl-1.2.5/: HEXLTargets.cmake
hexl/eltwise/: eltwise-add-mod.cpp
hexl_v0/lib/cmake/hexl-1.2.5/: HEXLTargets.cmake
hexl_v0/lib/pkgconfig/: hexl.pc
hexl_v2/lib/: libhexl.1.2.5.dylib  libhexl.dylib
hexl_v2/lib/cmake/hexl-1.2.5/: HEXLTargets-release.cmake
hexl_v2/lib/pkgconfig/: hexl.pc
serial_example/: serial_example.cpp
serial_example/cmake/: CMakeLists.txt
test/: Makefile  cmake_install.cmake
